--- a/templates/mc_details.html
+++ b/templates/mc_details.html
@@ -23,54 +23,30 @@
             </div>
             <div class="col-md-6">
                 <label for="Manufacturer" class="form-label">Manufacturer</label>
-                <select id="Manufacturer" class="form-select" name="Manufacturer">
+                <input type="text" class="form-control" id="Manufacturer" name="Manufacturer" placeholder="Name of Controller">
+            </div>
+            <div class ="col-md-6" >
+                <label for="shopName" class="form-label">Shop Name</label>
+                <select id="shopName" class="form-select" name="shopName">
                     <option selected>Select Variant</option>
-                    <option value="LWSCZAC (2nd Class AC Chair Car)">LWSCZAC (2nd Class AC Chair Car)</option>
-                    <option value="LWFCZAC (Executive Class AC Chair Car)">LWFCZAC (Executive Class AC Chair Car)</option>
-                    <option value="LWACCN (AC-3Tier)">LWACCN (AC-3Tier)</option>
-                    <option value="HUMSAFAR (AC-3Tier)">HUMSAFAR (AC-3Tier)</option>
-                    <option value="LWACCW (AC-2 Tier)">LWACCW (AC-2 Tier)</option>
-                    <option value="LWSCN (Non-AC Sleeper)">LWSCN (Non-AC Sleeper)</option>
-                    <option value="LS (GS/EOG 100 SEATER)">LS (GS/EOG 100 SEATER)</option>
-                    <option value="LWSDD (Deendayalu)">LWSDD (Deendayalu)</option>
-                    <option value="LWS (Antyodaya Coach)">LWS (Antyodaya Coach)</option>
-                    <option value="LWLRRM (450KVA Power Car)">LWLRRM (450KVA Power Car)</option>
-                    <option value="LWLRRM (750KVA Power Car)">LWLRRM (750KVA Power Car)</option>
-                    <option value="LDSLR (Under Slung Luggage Cum brake Van)">LDSLR (Under Slung Luggage Cum brake Van)</option>
-                    <option value="LSLRD with DA set (Luggage Cum brake van)">LSLRD with DA set (Luggage Cum brake van)</option>
-                    <option value="LWCBAC (AC Buffet Car)">LWCBAC (AC Buffet Car)</option>
-                    <option value="LWSCZ (2nd Class Non-AC Chair Car">LWSCZ (2nd Class Non-AC Chair Car</option>
-                    <option value="TRC (AC Track recording Car)">TRC (AC Track recording Car)</option>
-                    <option value="TRSC (AC track recording staff Car)">TRSC (AC track recording staff Car)</option>
-                    <option value="LWFAC (AC 1st Class)">LWFAC (AC 1st Class)</option>
-                    <option value="LFCWAC Composite (FAC+AC2T)">LFCWAC Composite (FAC+AC2T)</option>
-                    <option value="LVPH (LHB Parcel Van)">LVPH (LHB Parcel Van)</option>
-                    <option value="LWACCNE (Gareeb Rath AC Sleeper Coach)">LWACCNE (Gareeb Rath AC Sleeper Coach)</option>
-                    <option value="LWS-AC (AC- General)">LWS-AC (AC- General)</option>
-                </select>
-            </div>
-            {% comment %} Data Picker Initialization {% endcomment %}
-            <script>
-                $('.datepicker').datepicker();
-            </script>
-            
-            <div class ="col-md-6" >
-                <label class="md-form md-outline input-with-post-icon datepicker" for="start_date">Start Date</label>
-                <input placeholder="Select date" type="date" id="start_date" class="form-control" name ="start_date">
-                <i class="fas fa-calendar input-prefix" tabindex=0></i>
+                    <option value="Shell Shop">Shell Shop</option>
+                    <option value="Sheet Metal Shop">Sheet Metal Shop</option>
+                    <option value="Bogie Shop">Bogie Shop</option>
+                    <option value="Wheel Shop">Wheel Shop</option>
+                    <option value="Paint Shop">Paint Shop</option>
+                </select>    
             </div>
             <div class ="col-md-6" >
-                <label class="md-form md-outline input-with-post-icon datepicker" for="end_date">End Date</label>
-                <input placeholder="Select date" type="date" id="end_date" class="form-control" name ="end_date">
-                <i class="fas fa-calendar input-prefix" tabindex=0></i>
+                <label for="MachineNo" class="form-label">Machine No</label>
+                <input type="number" class="form-control" id="MachineNo" name="MachineNo" placeholder="Machine No">
             </div>
             <div class="col-md-6">
-                <label for="quantity" class="form-label">Quantity</label>
-                <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Enter quantity no.">
+                <label for="description" class="form-label">Description</label>
+                <input type="text" class="form-control" id="description" name="description" placeholder="Description">
             </div>
             <div class="col-md-6">
-                <label for="priority" class="form-label">Priority</label>
-                <input type="number" class="form-control" id="priority" name="priority" placeholder="Enter Priotity no.">
+                <label for="remarks" class="form-label">Priority</label>
+                <input type="text" class="form-control" id="remarks" name="remarks" placeholder="Remarks">
             </div>
             <div class="col-4">
                 <button type="submit" class="btn btn-primary">Submit</button>
