--- a/templates/hmi/hmi.html
+++ b/templates/hmi/hmi.html
@@ -130,7 +130,44 @@
             </div>
         </form>
     <div>
-   
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">S No.</th>
+                <th scope="col">Operator Name</th>
+                <th scope="col">Operator Id No.</th>
+                <th scope="col">Machine Name</th>
+                <th scope="col">Variant Name</th>
+                <th scope="col">Part Name</th>
+                <th scope="col">Part No.</th>
+                <th scope="col">Time In</th>
+                <th scope="col">Time Out</th>
+                <th scope="col">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if hmiAllDatas|length > 0 %}    
+                {% for hmiAllData in hmiAllDatas %}
+                    <tr>
+                        <th scope="row">{{forloop.counter}}</th>
+                        <td>{{hmiAllData.operatorname}}</td>
+                        <td>{{hmiAllData.identity}}</td>
+                        <td>{{hmiAllData.machine}}</td>
+                        <td>{{hmiAllData.variant}}</td>
+                        <td>{{hmiAllData.partname}}</td>
+                        <td>{{hmiAllData.partno}}</td>
+                        <td>{{hmiAllData.timein}}</td>
+                        <td>{{hmiAllData.timeout}}</td>
+                        <td>
+                            <a href="/invUpdate/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
+                            <a href="/delete/{{inhouseInv.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+                        </td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+        </tbody>
+    </table>
+        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     
