--- a/templates/hmi/hmi.html
+++ b/templates/hmi/hmi.html
@@ -146,18 +146,18 @@
             </tr>
         </thead>
         <tbody>
-            {% if hmiAllDatas|length > 0 %}    
-                {% for hmiAllData in hmiAllDatas %}
+            {% if hmiAllData|length > 0 %}    
+                {% for Data in hmiAllData %}
                     <tr>
                         <th scope="row">{{forloop.counter}}</th>
-                        <td>{{hmiAllData.operatorname}}</td>
-                        <td>{{hmiAllData.identity}}</td>
-                        <td>{{hmiAllData.machine}}</td>
-                        <td>{{hmiAllData.variant}}</td>
-                        <td>{{hmiAllData.partname}}</td>
-                        <td>{{hmiAllData.partno}}</td>
-                        <td>{{hmiAllData.timein}}</td>
-                        <td>{{hmiAllData.timeout}}</td>
+                        <td>{{Data.operatorname}}</td>
+                        <td>{{Data.identity}}</td>
+                        <td>{{Data.machine}}</td>
+                        <td>{{Data.variant}}</td>
+                        <td>{{Data.partname}}</td>
+                        <td>{{Data.partno}}</td>
+                        <td>{{Data.timein}}</td>
+                        <td>{{Data.timeout}}</td>
                         <td>
                             <a href="/invUpdate/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
                             <a href="/delete/{{inhouseInv.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
