--- a/templates/inventory/inHouseInv.html
+++ b/templates/inventory/inHouseInv.html
@@ -56,49 +56,49 @@
         {% comment %} <div class=" container col-6">
         </div> {% endcomment %}
     </form>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        
+    </script>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">S No.</th>
+                <th scope="col">Product S No..</th>
+                <th scope="col">Level</th>
+                <th scope="col">QPP</th>
+                <th scope="col">Dimension</th>
+                <th scope="col">Drawing No.</th>
+                <th scope="col">Available Nos.</th>
+                <th scope="col">Descriptions</th>
+                <th scope="col">Time In</th>
+                <th scope="col">Actions</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            {% if inhouseInvs|length > 0 %}    
+                {% for inhouseInv in inhouseInvs %}
+                    <tr>
+                        <th scope="row">{{forloop.counter}}</th>
+                        <td>{{inhouseInv.productSno}}</td>
+                        <td>{{inhouseInv.level}}</td>
+                        <td>{{inhouseInv.qpp}}</td>
+                        <td>{{inhouseInv.dimension}}</td>
+                        <td>{{inhouseInv.drawingno}}</td>
+                        <td>{{inhouseInv.availableNos}}</td>
+                        <td>{{inhouseInv.description}}</td>
+                        <td>{{inhouseInv.timein}}</td>
+
+                        <td>
+                            <a href="/invUpdate/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
+                            <a href="/delete/{{inhouseInv.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+                        </td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+        </tbody>
+    </table>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    
-</script>
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">S No.</th>
-            <th scope="col">Product S No..</th>
-            <th scope="col">Level</th>
-            <th scope="col">QPP</th>
-            <th scope="col">Dimension</th>
-            <th scope="col">Drawing No.</th>
-            <th scope="col">Available Nos.</th>
-            <th scope="col">Descriptions</th>
-            <th scope="col">Time In</th>
-            <th scope="col">Actions</th>
-
-        </tr>
-    </thead>
-    <tbody>
-        {% if inhouseInvs|length > 0 %}    
-            {% for inhouseInv in inhouseInvs %}
-                <tr>
-                    <th scope="row">{{forloop.counter}}</th>
-                    <td>{{inhouseInv.productSno}}</td>
-                    <td>{{orderinhouseInv.level}}</td>
-                    <td>{{orderinhouseInv.qpp}}</td>
-                    <td>{{orderinhouseInv.dimension}}</td>
-                    <td>{{orderinhouseInv.drawingno}}</td>
-                    <td>{{orderinhouseInv.availableNos}}</td>
-                    <td>{{orderinhouseInv.description}}</td>
-                    <td>{{orderinhouseInv.timein}}</td>
-
-                    <td>
-                        <a href="/invUpdate/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
-                        <a href="/delete/{{inhouseInv.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
-                    </td>
-                </tr>
-            {% endfor %}
-        {% endif %}
-    </tbody>
-</table>
-
 {% endblock body %}
