--- a/templates/mc_details.html
+++ b/templates/mc_details.html
@@ -3,20 +3,14 @@
 {% block body %}
 
 <div class="container mt-5">
-    {% comment %} <button type ="button" class="btn btn-primary float-right">Add</button>  {% endcomment %}
-    {% comment %} <button class="btn btn-primary float-right mt-5 mr-2" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        Add
-    </button>     {% endcomment %}
     <p>
     <button class="btn btn-primary float-right mt-5 mr-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         Add
     </button></p>
     <div class="collapse" id="collapseExample">
-        <form class="row g-3 pt-5"  method="post" action="/place_order" >{{csrf_input}}
-            <!-- {% csrf_token %} -->
-            <script>
-                const csrftoken=document.queryselector('[name=csrfmiddlewaretoken]').value;
-            </script>
+        <form class="row g-3 pt-5"  method="post" action="/machine_details" >
+            {% csrf_token %}
+           
             <div class="col-md-6 ">
                 <label for="machine_name" class="form-label pt-20">Machine Name</label>
                 <input type="text" class="form-control" id="machine_name" name="machine_name" placeholder="Name of Machine">
@@ -45,7 +39,7 @@
                 <input type="text" class="form-control" id="description" name="description" placeholder="Description">
             </div>
             <div class="col-md-6">
-                <label for="remarks" class="form-label">Priority</label>
+                <label for="remarks" class="form-label">Remarks</label>
                 <input type="text" class="form-control" id="remarks" name="remarks" placeholder="Remarks">
             </div>
             <div class="col-4">
@@ -64,29 +58,31 @@
                 <th scope="col">Shop Name</th>
                 <th scope="col">Machine No.</th>
                 <th scope="col">Description</th>
-                <th scope="col">RT Status</th>
+                {% comment %} <th scope="col">RT Status</th> {% endcomment %}
                 <th scope="col">Remarks</th>
+                <th scope="col">Actions</th>
+
             </tr>
         </thead>
-        {% comment %} <tbody>
-            {% if orders|length > 0 %}    
-                {% for order in orders %}
+        <tbody>
+            {% if detail|length > 0 %}    
+                {% for Data in detail %}
                     <tr>
                         <th scope="row">{{forloop.counter}}</th>
-                        <td>{{order.orderRefNo}}</td>
-                        <td>{{order.orderVariant}}</td>
-                        <td>{{order.orderStartDate}}</td>
-                        <td>{{order.orderEndDate}}</td>
-                        <td>{{order.orderQuantity}}</td>
-                        <td>{{order.orderPriority}}</td>
+                        <td>{{Data.machine_name}}</td>
+                        <td>{{Data.Manufacturer}}</td>
+                        <td>{{Data.shopName}}</td>
+                        <td>{{Data.MachineNo}}</td>
+                        <td>{{Data.Description}}</td>
+                        <td>{{Data.remarks}}</td> 
                         <td>
                             <a href="/update/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
-                            <a href="/delete/{{order.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+                            <a href="/delete/{{Data.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
                         </td>
                     </tr>
                 {% endfor %}
             {% endif %}
-        </tbody> {% endcomment %}
+        </tbody> 
     </table>
 </div>
 {% endblock body %}
