--- a/templates/comp_details.html
+++ b/templates/comp_details.html
@@ -1,8 +1,46 @@
 {% extends 'base.html' %}
-{% block title %}Place_Order{% endblock title %}
+{% block title %}Component Details{% endblock title %}
 {% block body %}
-<div class="mt-5">
+
     <div class="container pt-5">
+        <p>
+            <button class="btn btn-primary float-right mt-5 mr-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                Add
+            </button></p>
+            <div class="collapse" id="collapseExample">
+                <form class="row g-3 pt-5"  method="post" action="/comp_details" >
+                    {% csrf_token %}
+                   
+                    <div class="col-md-6 ">
+                        <label for="component_name" class="form-label pt-20">Component Name</label>
+                        <input type="text" class="form-control" id="component_name" name="component_name" placeholder="Name of Component">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="DrawingNo" class="form-label">Drawing No</label>
+                        <input type="text" class="form-control" id="DrawingNo" name="DrawingNo" placeholder="Drawing No">
+                    </div>
+                    <div class ="col-md-6" >
+                        <label for="qpp" class="form-label">Quantity Per Coach</label>
+                        <input type="number" class="form-control" id="qpp" name="qpp" placeholder="Quantity Per Coach">
+            
+                    </div>
+                    <div class ="col-md-6" >
+                        <label for="Level" class="form-label">Level</label>
+                        <input type="text" class="form-control" id="Level" name="Level" placeholder="Level">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="description" class="form-label">Description</label>
+                        <input type="text" class="form-control" id="description" name="description" placeholder="Description">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="modelName" class="form-label">Model Name</label>
+                        <input type="text" class="form-control" id="modelName" name="modelName" placeholder="Model Name">
+                    </div>
+                    <div class="col-4">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
         <table class="table ">
             <thead>
                 <tr>
@@ -13,29 +51,31 @@
                     <th scope="col">Level</th>
                     <th scope="col">Description</th>
                     <th scope="col">Model Name</th>
-                    <th scope="col">Remarks</th>
+                    <th scope="col">Actions</th>
+
+                    {% comment %} <th scope="col">Remarks</th> {% endcomment %}
                 </tr>
             </thead>
-            {% comment %} <tbody>
-                {% if orders|length > 0 %}    
-                    {% for order in orders %}
+            <tbody>
+                {% if cpdetail|length > 0 %}    
+                    {% for alldata in cpdetail %}
                         <tr>
                             <th scope="row">{{forloop.counter}}</th>
-                            <td>{{order.orderRefNo}}</td>
-                            <td>{{order.orderVariant}}</td>
-                            <td>{{order.orderStartDate}}</td>
-                            <td>{{order.orderEndDate}}</td>
-                            <td>{{order.orderQuantity}}</td>
-                            <td>{{order.orderPriority}}</td>
+                            <td>{{allData.component_name}}</td>
+                            <td>{{allData.DrawingNo}}</td>
+                            <td>{{allData.qpp}}</td>
+                            <td>{{allData.Level}}</td>
+                            <td>{{allData.description}}</td>
+                            <td>{{allData.modelName}}</td>
                             <td>
                                 <a href="/update/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
-                                <a href="/delete/{{order.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+                                <a href="/delete/{{allData.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
                             </td>
                         </tr>
                     {% endfor %}
                 {% endif %}
-            </tbody> {% endcomment %}
+            </tbody> 
         </table>
     </div>
-</div>
+
 {% endblock body %}
