--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -2,11 +2,11 @@
 {% block title %}Place_Order{% endblock title %}
 {% block body %}
 <div class="container pt-5">
-    <form class="row g-3 pt-5"  method="post" action="/place_order" >{{csrf_input}}
-        <!-- {% csrf_token %} -->
-        <script>
+    <form class="row g-3 pt-5"  method="post" action="/place_order" >
+         {% csrf_token %} 
+        {% comment %} <script>
             const csrftoken=document.queryselector('[name=csrfmiddlewaretoken]').value;
-        </script>
+        </script> {% endcomment %}
         <div class="col-md-6 ">
             <label for="OR_no." class="form-label pt-20">Order Reference No.</label>
             <input type="text" class="form-control" id="OR_no." name="OR_no" placeholder="Order Reference No">
@@ -17,7 +17,7 @@
                 <option selected>Select Variant</option>
                 <option value="LWSCZAC (2nd Class AC Chair Car)">LWSCZAC (2nd Class AC Chair Car)</option>
                 <option value="LWFCZAC (Executive Class AC Chair Car)">LWFCZAC (Executive Class AC Chair Car)</option>
-                <option value="LWACCN (AC-3Tier)">LWACCN (AC-3Tier)</option>
+                <option value="LWACCN (AC-3 tier)">LWACCN (AC-3 tier)</option>
                 <option value="HUMSAFAR (AC-3Tier)">HUMSAFAR (AC-3Tier)</option>
                 <option value="LWACCW (AC-2 Tier)">LWACCW (AC-2 Tier)</option>
                 <option value="LWSCN (Non-AC Sleeper)">LWSCN (Non-AC Sleeper)</option>
@@ -29,7 +29,7 @@
                 <option value="LDSLR (Under Slung Luggage Cum brake Van)">LDSLR (Under Slung Luggage Cum brake Van)</option>
                 <option value="LSLRD with DA set (Luggage Cum brake van)">LSLRD with DA set (Luggage Cum brake van)</option>
                 <option value="LWCBAC (AC Buffet Car)">LWCBAC (AC Buffet Car)</option>
-                <option value="LWSCZ (2nd Class Non-AC Chair Car">LWSCZ (2nd Class Non-AC Chair Car</option>
+                <option value="LWSCZ (2nd Class Non-AC Chair Car)">LWSCZ (2nd Class Non-AC Chair Car)</option>
                 <option value="TRC (AC Track recording Car)">TRC (AC Track recording Car)</option>
                 <option value="TRSC (AC track recording staff Car)">TRSC (AC track recording staff Car)</option>
                 <option value="LWFAC (AC 1st Class)">LWFAC (AC 1st Class)</option>
