--- a/templates/comp_details.html
+++ b/templates/comp_details.html
@@ -61,12 +61,12 @@
                     {% for alldata in cpdetail %}
                         <tr>
                             <th scope="row">{{forloop.counter}}</th>
-                            <td>{{allData.component_name}}</td>
-                            <td>{{allData.DrawingNo}}</td>
-                            <td>{{allData.qpp}}</td>
-                            <td>{{allData.Level}}</td>
-                            <td>{{allData.description}}</td>
-                            <td>{{allData.modelName}}</td>
+                            <td>{{alldata.component_name}}</td>
+                            <td>{{alldata.DrawingNo}}</td>
+                            <td>{{alldata.qpp}}</td>
+                            <td>{{alldata.Level}}</td>
+                            <td>{{alldata.description}}</td>
+                            <td>{{alldata.modelName}}</td>
                             <td>
                                 <a href="/update/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
                                 <a href="/delete/{{allData.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
