--- a/templates/operation_details.html
+++ b/templates/operation_details.html
@@ -14,17 +14,17 @@
                     <th scope="col">Remarks</th>
                 </tr>
             </thead>
-            {% comment %} <tbody>
-                {% if orders|length > 0 %}    
-                    {% for order in orders %}
+            <tbody>
+                {% if operDetail|length > 0 %}    
+                    {% for opera in operDetail %}
                         <tr>
                             <th scope="row">{{forloop.counter}}</th>
-                            <td>{{order.orderRefNo}}</td>
-                            <td>{{order.orderVariant}}</td>
-                            <td>{{order.orderStartDate}}</td>
-                            <td>{{order.orderEndDate}}</td>
-                            <td>{{order.orderQuantity}}</td>
-                            <td>{{order.orderPriority}}</td>
+                            <td>{{opera.operationName}}</td>
+                            <td>{{opera.operationName}}</td>
+                            <td>{{opera.operationMachineName}}</td>
+                            <td>{{opera.operationTime}}</td>
+                            <td>{{opera.operationMachineName}}</td>
+                            <!-- <td>{{opera.orderPriority}}</td> -->
                             <td>
                                 <a href="/update/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
                                 <a href="/delete/{{order.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
@@ -32,7 +32,7 @@
                         </tr>
                     {% endfor %}
                 {% endif %}
-            </tbody> {% endcomment %}
+            </tbody>
         </table>
     </div>
 </div>
