--- a/templates/mc_details.html
+++ b/templates/mc_details.html
@@ -75,7 +75,7 @@
                         <td>{{Data.remarks}}</td> 
                         <td>
                             <a href="/update/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
-                            <a href="/delete/{{Data.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+                            <a href="/delete_mc/{{Data.id}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
                         </td>
                     </tr>
                 {% endfor %}
