--- a/templates/inventory/inHouseInventory.html
+++ b/templates/inventory/inHouseInventory.html
@@ -56,12 +56,8 @@
         {% comment %} <div class=" container col-6">
         </div> {% endcomment %}
     </form>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        
     </script>
-    <table class="table">
+    <table class="table caption-top table-striped table-hover table-bordered ">
         <thead>
             <tr>
                 <th scope="col">S No.</th>
