--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -1,78 +1,86 @@
 {% extends 'base.html' %}
 {% block title %}Place_Order{% endblock title %}
 {% block body %}
-<div class="container pt-5">
-    <form class="row g-3 pt-5"  method="post" action="/place_order" >
-         {% csrf_token %} 
-        {% comment %} <script>
-            const csrftoken=document.queryselector('[name=csrfmiddlewaretoken]').value;
-        </script> {% endcomment %}
-        <div class="col-md-6 ">
-            <label for="OR_no." class="form-label pt-20">Order Reference No.</label>
-            <input type="text" class="form-control" id="OR_no." name="OR_no" placeholder="Order Reference No">
-        </div>
-        <div class="col-md-6">
-            <label for="variant" class="form-label">Variant</label>
-            <select id="variant" class="form-select" name="variant">
-                <option selected>Select Variant</option>
-                <option value="LWSCZAC (2nd Class AC Chair Car)">LWSCZAC (2nd Class AC Chair Car)</option>
-                <option value="LWFCZAC (Executive Class AC Chair Car)">LWFCZAC (Executive Class AC Chair Car)</option>
-                <option value="LWACCN (AC-3 tier)">LWACCN (AC-3 tier)</option>
-                <option value="HUMSAFAR (AC-3Tier)">HUMSAFAR (AC-3Tier)</option>
-                <option value="LWACCW (AC-2 Tier)">LWACCW (AC-2 Tier)</option>
-                <option value="LWSCN (Non-AC Sleeper)">LWSCN (Non-AC Sleeper)</option>
-                <option value="LS (GS/EOG 100 SEATER)">LS (GS/EOG 100 SEATER)</option>
-                <option value="LWSDD (Deendayalu)">LWSDD (Deendayalu)</option>
-                <option value="LWS (Antyodaya Coach)">LWS (Antyodaya Coach)</option>
-                <option value="LWLRRM (450KVA Power Car)">LWLRRM (450KVA Power Car)</option>
-                <option value="LWLRRM (750KVA Power Car)">LWLRRM (750KVA Power Car)</option>
-                <option value="LDSLR (Under Slung Luggage Cum brake Van)">LDSLR (Under Slung Luggage Cum brake Van)</option>
-                <option value="LSLRD with DA set (Luggage Cum brake van)">LSLRD with DA set (Luggage Cum brake van)</option>
-                <option value="LWCBAC (AC Buffet Car)">LWCBAC (AC Buffet Car)</option>
-                <option value="LWSCZ (2nd Class Non-AC Chair Car)">LWSCZ (2nd Class Non-AC Chair Car)</option>
-                <option value="TRC (AC Track recording Car)">TRC (AC Track recording Car)</option>
-                <option value="TRSC (AC track recording staff Car)">TRSC (AC track recording staff Car)</option>
-                <option value="LWFAC (AC 1st Class)">LWFAC (AC 1st Class)</option>
-                <option value="LFCWAC Composite (FAC+AC2T)">LFCWAC Composite (FAC+AC2T)</option>
-                <option value="LVPH (LHB Parcel Van)">LVPH (LHB Parcel Van)</option>
-                <option value="LWACCNE (Gareeb Rath AC Sleeper Coach)">LWACCNE (Gareeb Rath AC Sleeper Coach)</option>
-                <option value="LWS-AC (AC- General)">LWS-AC (AC- General)</option>
-            </select>
-        </div>
-        {% comment %} Data Picker Initialization {% endcomment %}
-        <script>
-            $('.datepicker').datepicker();
-        </script>
-        
-        <div class ="col-md-6" >
-            <label class="md-form md-outline input-with-post-icon datepicker" for="start_date">Start Date</label>
-            <input placeholder="Select date" type="date" id="start_date" class="form-control" name ="start_date">
-            <i class="fas fa-calendar input-prefix" tabindex=0></i>
-        </div>
-        <div class ="col-md-6" >
-            <label class="md-form md-outline input-with-post-icon datepicker" for="end_date">End Date</label>
-            <input placeholder="Select date" type="date" id="end_date" class="form-control" name ="end_date">
-            <i class="fas fa-calendar input-prefix" tabindex=0></i>
-        </div>
-        <div class="col-md-6">
-            <label for="quantity" class="form-label">Quantity</label>
-            <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Enter quantity no.">
-        </div>
-        <div class="col-md-6">
-            <label for="priority" class="form-label">Priority</label>
-            <input type="number" class="form-control" id="priority" name="priority" placeholder="Enter Priotity no.">
-        </div>
-        <div class="col-4">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </form>
-    <form class="row g-3"  action="/generate_schedule">
-        {% csrf_token %}
-        <div class="col-4">
-            <button type="submit" class="btn btn-primary">Generate Schedule</button>
-        </div>
-    </form>
-    <table class="table">
+<div class="container pt-4 mt-5"><br>
+    <h1 class="text-3xl text-center leading-8 font-bold tracking-tight text-green-700 ">Job Scheduling</h1>
+</div>
+<div class="container pt-1">
+    <p>
+    <button class="btn btn-primary float-right mr" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Add Orders</button></p><br>
+    <div class="collapse shadow-lg p-3 mb-5 bg-body rounded" id="collapseExample">
+        <form class="row"  method="post" action="/place_order" >
+            {% csrf_token %} 
+            {% comment %} <script>
+                const csrftoken=document.queryselector('[name=csrfmiddlewaretoken]').value;
+            </script> {% endcomment %}
+            <div class="col-md-6 ">
+                <label for="OR_no." class="form-label pt-20">Order Reference No.</label>
+                <input type="text" class="form-control" id="OR_no." name="OR_no" placeholder="Order Reference No">
+            </div>
+            <div class="col-md-6">
+                <label for="variant" class="form-label">Variant</label>
+                <select id="variant" class="form-select" name="variant">
+                    <option selected>Select Variant</option>
+                    <option value="LWSCZAC (2nd Class AC Chair Car)">LWSCZAC (2nd Class AC Chair Car)</option>
+                    <option value="LWFCZAC (Executive Class AC Chair Car)">LWFCZAC (Executive Class AC Chair Car)</option>
+                    <option value="LWACCN (AC-3 tier)">LWACCN (AC-3 tier)</option>
+                    <option value="HUMSAFAR (AC-3Tier)">HUMSAFAR (AC-3Tier)</option>
+                    <option value="LWACCW (AC-2 Tier)">LWACCW (AC-2 Tier)</option>
+                    <option value="LWSCN (Non-AC Sleeper)">LWSCN (Non-AC Sleeper)</option>
+                    <option value="LS (GS/EOG 100 SEATER)">LS (GS/EOG 100 SEATER)</option>
+                    <option value="LWSDD (Deendayalu)">LWSDD (Deendayalu)</option>
+                    <option value="LWS (Antyodaya Coach)">LWS (Antyodaya Coach)</option>
+                    <option value="LWLRRM (450KVA Power Car)">LWLRRM (450KVA Power Car)</option>
+                    <option value="LWLRRM (750KVA Power Car)">LWLRRM (750KVA Power Car)</option>
+                    <option value="LDSLR (Under Slung Luggage Cum brake Van)">LDSLR (Under Slung Luggage Cum brake Van)</option>
+                    <option value="LSLRD with DA set (Luggage Cum brake van)">LSLRD with DA set (Luggage Cum brake van)</option>
+                    <option value="LWCBAC (AC Buffet Car)">LWCBAC (AC Buffet Car)</option>
+                    <option value="LWSCZ (2nd Class Non-AC Chair Car)">LWSCZ (2nd Class Non-AC Chair Car)</option>
+                    <option value="TRC (AC Track recording Car)">TRC (AC Track recording Car)</option>
+                    <option value="TRSC (AC track recording staff Car)">TRSC (AC track recording staff Car)</option>
+                    <option value="LWFAC (AC 1st Class)">LWFAC (AC 1st Class)</option>
+                    <option value="LFCWAC Composite (FAC+AC2T)">LFCWAC Composite (FAC+AC2T)</option>
+                    <option value="LVPH (LHB Parcel Van)">LVPH (LHB Parcel Van)</option>
+                    <option value="LWACCNE (Gareeb Rath AC Sleeper Coach)">LWACCNE (Gareeb Rath AC Sleeper Coach)</option>
+                    <option value="LWS-AC (AC- General)">LWS-AC (AC- General)</option>
+                </select>
+            </div>
+            {% comment %} Data Picker Initialization {% endcomment %}
+            <script>
+                $('.datepicker').datepicker();
+            </script>
+            
+            <div class ="col-md-6" >
+                <label class="md-form md-outline input-with-post-icon datepicker" for="start_date">Start Date</label>
+                <input placeholder="Select date" type="date" id="start_date" class="form-control" name ="start_date">
+                <i class="fas fa-calendar input-prefix" tabindex=0></i>
+            </div>
+            <div class ="col-md-6" >
+                <label class="md-form md-outline input-with-post-icon datepicker" for="end_date">End Date</label>
+                <input placeholder="Select date" type="date" id="end_date" class="form-control" name ="end_date">
+                <i class="fas fa-calendar input-prefix" tabindex=0></i>
+            </div>
+            <div class="col-md-6">
+                <label for="quantity" class="form-label">Quantity</label>
+                <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Enter quantity no.">
+            </div>
+            <div class="col-md-6">
+                <label for="priority" class="form-label">Priority</label>
+                <input type="number" class="form-control" id="priority" name="priority" placeholder="Enter Priotity no.">
+            </div>
+            <div class="grid grid-cols-1 gap-4 place-items-center pt-2">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+        <form class="row g-3"  action="/generate_schedule">
+            {% csrf_token %}
+            <div class="grid grid-cols-1 gap-4 place-items-center">
+                <button type="submit" class="btn btn-primary">Generate Schedule</button>
+            </div>
+        </form>
+    </div>
+    <table class="table caption-top table-striped table-hover table-bordered ">
+        <caption>List of Orders</caption>
         <thead>
             <tr>
                 <th scope="col">S No.</th>
@@ -91,7 +99,7 @@
                     <tr>
                         <th scope="row">{{forloop.counter}}</th>
                         <td>{{order.orderRefNo}}</td>
-                        <td>{{order.orderVariant}}</td>
+                        <td><a href="/comp_details">{{order.orderVariant}}</a></td>
                         <td>{{order.orderStartDate}}</td>
                         <td>{{order.orderEndDate}}</td>
                         <td>{{order.orderQuantity}}</td>
