--- a/templates/comp_details.html
+++ b/templates/comp_details.html
@@ -1,81 +1,97 @@
 {% extends 'base.html' %}
 {% block title %}Component Details{% endblock title %}
 {% block body %}
-
-    <div class="container pt-5">
-        <p>
-            <button class="btn btn-primary float-right mt-5 mr-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                Add
-            </button></p>
-            <div class="collapse" id="collapseExample">
-                <form class="row g-3 pt-5"  method="post" action="/comp_details" >
-                    {% csrf_token %}
-                   
-                    <div class="col-md-6 ">
-                        <label for="component_name" class="form-label pt-20">Component Name</label>
-                        <input type="text" class="form-control" id="component_name" name="component_name" placeholder="Name of Component">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="DrawingNo" class="form-label">Drawing No</label>
-                        <input type="text" class="form-control" id="DrawingNo" name="DrawingNo" placeholder="Drawing No">
-                    </div>
-                    <div class ="col-md-6" >
-                        <label for="qpp" class="form-label">Quantity Per Coach</label>
-                        <input type="number" class="form-control" id="qpp" name="qpp" placeholder="Quantity Per Coach">
+<div class="container pt-4 mt-5"><br>
+    <h1 class="text-3xl text-center leading-8 font-bold tracking-tight text-green-700 ">Components Details</h1>
+</div>
+<div class="container pt-1">
+    <p>
+        <button class="btn btn-primary float-right mr" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Add
+        </button>
+    </p><br>
+    <div class="collapse" id="collapseExample">
+        <form class="row g-3"  method="post" action="/comp_details" >
+            {% csrf_token %}
             
-                    </div>
-                    <div class ="col-md-6" >
-                        <label for="Level" class="form-label">Level</label>
-                        <input type="text" class="form-control" id="Level" name="Level" placeholder="Level">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="description" class="form-label">Description</label>
-                        <input type="text" class="form-control" id="description" name="description" placeholder="Description">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="modelName" class="form-label">Model Name</label>
-                        <input type="text" class="form-control" id="modelName" name="modelName" placeholder="Model Name">
-                    </div>
-                    <div class="col-4">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </form>
+            <div class="col-md-6 ">
+                <label for="component_name" class="form-label pt-20">Component Name</label>
+                <input type="text" class="form-control" id="component_name" name="component_name" placeholder="Name of Component">
             </div>
-        <table class="table ">
-            <thead>
-                <tr>
-                    <th scope="col">S No.</th>
-                    <th scope="col">Component Name</th>
-                    <th scope="col">Drawing No.</th>
-                    <th scope="col">QPP</th>
-                    <th scope="col">Level</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Model Name</th>
-                    <th scope="col">Actions</th>
-
-                    {% comment %} <th scope="col">Remarks</th> {% endcomment %}
-                </tr>
-            </thead>
-            <tbody>
-                {% if cpdetail|length > 0 %}    
-                    {% for alldata in cpdetail %}
-                        <tr>
-                            <th scope="row">{{forloop.counter}}</th>
-                            <td>{{alldata.component_name}}</td>
-                            <td>{{alldata.DrawingNo}}</td>
-                            <td>{{alldata.qpp}}</td>
-                            <td>{{alldata.Level}}</td>
-                            <td>{{alldata.description}}</td>
-                            <td>{{alldata.modelName}}</td>
-                            <td>
-                                <a href="/update/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
-                                <a href="/delete/{{allData.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                {% endif %}
-            </tbody> 
-        </table>
+            <div class="col-md-6">
+                <label for="DrawingNo" class="form-label">Drawing No</label>
+                <input type="text" class="form-control" id="DrawingNo" name="DrawingNo" placeholder="Drawing No">
+            </div>
+            <div class ="col-md-6" >
+                <label for="qpp" class="form-label">Quantity Per Coach</label>
+                <input type="number" class="form-control" id="qpp" name="qpp" placeholder="Quantity Per Coach">
+    
+            </div>
+            <div class ="col-md-6" >
+                <label for="Level" class="form-label">Level</label>
+                <input type="text" class="form-control" id="Level" name="Level" placeholder="Level">
+            </div>
+            <div class ="col-md-6" >
+                <label for="predecessor" class="form-label">Predecessor</label>
+                <input type="text" class="form-control" id="predecessor" name="predecessor" placeholder="predecessor">
+            </div>
+            <div class ="col-md-6" >
+                <label for="successor" class="form-label">Successor</label>
+                <input type="text" class="form-control" id="successor" name="successor" placeholder="successor">
+            </div>
+            <div class="col-md-6">
+                <label for="description" class="form-label">Description</label>
+                <input type="text" class="form-control" id="description" name="description" placeholder="Description">
+            </div>
+            <div class="col-md-6">
+                <label for="modelName" class="form-label">Model Name</label>
+                <input type="text" class="form-control" id="modelName" name="modelName" placeholder="Model Name">
+            </div>
+            <div class="col-4">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
     </div>
+    <table class="table table-striped table-hover table-bordered caption-top">
+        <caption>List of Components</caption>
+        <thead>
+            <tr>
+                <th scope="col">S No.</th>
+                <th scope="col">Component Name</th>
+                <th scope="col">Drawing No.</th>
+                <th scope="col">Quantiy Per Product</th>
+                <th scope="col">Level</th>
+                <th scope="col">Predecessor</th>
+                <th scope="col">Successor</th>
+                <th scope="col">Description</th>
+                <th scope="col">Model Name</th>
+                <th scope="col">Actions</th>
+
+                {% comment %} <th scope="col">Remarks</th> {% endcomment %}
+            </tr>
+        </thead>
+        <tbody>
+            {% if cpdetail|length > 0 %}    
+                {% for alldata in cpdetail %}
+                    <tr>
+                        <th scope="row">{{forloop.counter}}</th>
+                        <td>{{alldata.component_name}}</td>
+                        <td>{{alldata.DrawingNo}}</td>
+                        <td>{{alldata.qpp}}</td>
+                        <td>{{alldata.Level}}</td>
+                        <td>{{alldata.predecessor}}</td>
+                        <td>{{alldata.successor}}</td>
+                        <td>{{alldata.description}}</td>
+                        <td>{{alldata.modelName}}</td>
+                        <td>
+                            <a href="/update/{{forloop.counter}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
+                            <a href="/delete_comp/{{alldata.id}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+                        </td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+        </tbody> 
+    </table>
+</div>
 
 {% endblock body %}
