--- a/templates/machine_loading.html
+++ b/templates/machine_loading.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}Machine_loading{% endblock title %}
 {% block body %}
+<div class="container pt-4 mt-5"><br>
+    <h1 class="text-3xl text-center leading-8 font-bold tracking-tight text-green-700 ">Job Loading Chart</h1>
+</div>
 <div class="pt-4">
     {% autoescape off %}
         {% include 'machine_loading_fig.html' %}
