--- a/templates/operation_details.html
+++ b/templates/operation_details.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 {% block title %}Place_Order{% endblock title %}
 {% block body %}
-<div class="mt-5">
+<div class="container pt-4 mt-5"><br>
+    <h1 class="text-3xl text-center leading-8 font-bold tracking-tight text-green-700 ">Operations Detail</h1>
+</div>
+<div class="mt-1">
     <div class="container pt-5">
-        <table class="table ">
+        <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
                     <th scope="col">S No.</th>
@@ -12,6 +15,7 @@
                     <th scope="col">Machine</th>
                     <th scope="col">Process Time</th>
                     <th scope="col">Remarks</th>
+                    <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
