--- a/templates/update.html
+++ b/templates/update.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}Place_Order{% endblock title %}
 {% block body %}
+<div class="container pt-4 mt-5"><br>
+    <h1 class="text-3xl text-center leading-8 font-bold tracking-tight text-green-700 ">Order Update</h1>
+</div>
 <div class="container my-3">
     <form class="row g-3"  method="post" action="/update{{order.sno}}">
         {% csrf_token %}
@@ -11,41 +14,13 @@
         <div class="col-md-6">
             <label for="variant" class="form-label">Variant</label>
             <input type="text" placeholder="name of Variant" class="form-control" id="variant" name="variant"  value={{order.orderVariant}}>
-
-            {% comment %} <select id="variant" class="form-select" name="variant" value={{order.orderVariant}}>
-                <option selected>Select Variant</option>
-                <option value="LWSCZAC (2nd Class AC Chair Car)">LWSCZAC (2nd Class AC Chair Car)</option>
-                <option value="LWFCZAC (Executive Class AC Chair Car)">LWFCZAC (Executive Class AC Chair Car)</option>
-                <option value="LWACCN (AC-3Tier)">LWACCN (AC-3Tier)</option>
-                <option value="HUMSAFAR (AC-3Tier)">HUMSAFAR (AC-3Tier)</option>
-                <option value="LWACCW (AC-2 Tier)">LWACCW (AC-2 Tier)</option>
-                <option value="LWSCN (Non-AC Sleeper)">LWSCN (Non-AC Sleeper)</option>
-                <option value="LS (GS/EOG 100 SEATER)">LS (GS/EOG 100 SEATER)</option>
-                <option value="LWSDD (Deendayalu)">LWSDD (Deendayalu)</option>
-                <option value="LWS (Antyodaya Coach)">LWS (Antyodaya Coach)</option>
-                <option value="LWLRRM (450KVA Power Car)">LWLRRM (450KVA Power Car)</option>
-                <option value="LWLRRM (750KVA Power Car)">LWLRRM (750KVA Power Car)</option>
-                <option value="LDSLR (Under Slung Luggage Cum brake Van)">LDSLR (Under Slung Luggage Cum brake Van)</option>
-                <option value="LSLRD with DA set (Luggage Cum brake van)">LSLRD with DA set (Luggage Cum brake van)</option>
-                <option value="LWCBAC (AC Buffet Car)">LWCBAC (AC Buffet Car)</option>
-                <option value="LWSCZ (2nd Class Non-AC Chair Car">LWSCZ (2nd Class Non-AC Chair Car</option>
-                <option value="TRC (AC Track recording Car)">TRC (AC Track recording Car)</option>
-                <option value="TRSC (AC track recording staff Car)">TRSC (AC track recording staff Car)</option>
-                <option value="LWFAC (AC 1st Class)">LWFAC (AC 1st Class)</option>
-                <option value="LFCWAC Composite (FAC+AC2T)">LFCWAC Composite (FAC+AC2T)</option>
-                <option value="LVPH (LHB Parcel Van)">LVPH (LHB Parcel Van)</option>
-                <option value="LWACCNE (Gareeb Rath AC Sleeper Coach)">LWACCNE (Gareeb Rath AC Sleeper Coach)</option>
-                <option value="LWS-AC (AC- General)">LWS-AC (AC- General)</option>
-            </select> {% endcomment %}
         </div>
-        {% comment %} Data Picker Initialization {% endcomment %}
         <script>
             $('.datepicker').datepicker();
         </script>
-        
         <div class ="col-md-6" >
             <label class="md-form md-outline input-with-post-icon datepicker" for="start_date">Start Date</label>
-            <input placeholder="Select date" type="date" id="start_date" class="form-control" name ="start_date" value={{order.orderStartDate}}>
+            <input placeholder="Select date" type="date" id="start_date" class="form-control" name ="start_date" value={{order.orderStartDate}} format="d-m-Y">
             <i class="fas fa-calendar input-prefix" tabindex=0></i>
         </div>
         <div class ="col-md-6" >
