--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -99,7 +99,7 @@
                     <tr>
                         <th scope="row">{{forloop.counter}}</th>
                         <td>{{order.orderRefNo}}</td>
-                        <td><a href="/comp_details">{{order.orderVariant}}</a></td>
+                        <td><a href="/getComponentsDetails/{{order.orderVariant}}">{{order.orderVariant}}</a></td>
                         <td>{{order.orderStartDate}}</td>
                         <td>{{order.orderEndDate}}</td>
                         <td>{{order.orderQuantity}}</td>
