--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,7 @@
 {% block title %}Home{% endblock title %}
 {% block body %}
 
-
-
+{% comment "Indicative" %} Main Div begins here{% endcomment %}
 <div class="container-fluid  px-0 mt-5">
   {% csrf_token %}
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
