--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -75,7 +75,7 @@
        
     </div>
     <table class="table caption-top table-striped table-hover table-bordered ">
-        <caption>List of Orders</caption>
+        <caption class="caption-top">List of Orders</caption>
         <thead>
             <tr>
                 <th scope="col">S No.</th>
