--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock title %}
 {% block body %}
-
-{% comment "Indicative" %} Main Div begins here{% endcomment %}
-<div class="container-fluid  px-0 mt-5">
-  {% csrf_token %}
+<div class="container-fluid px-0 ">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
