--- a/templates/comp_details.html
+++ b/templates/comp_details.html
@@ -53,7 +53,7 @@
         </form>
     </div>
     <table class="table table-striped table-hover table-bordered caption-top">
-        <caption>List of Components</caption>
+        <caption class="caption-top">List of Components</caption>
         <thead>
             <tr>
                 <th scope="col">S No.</th>
