--- a/templates/mc_details.html
+++ b/templates/mc_details.html
@@ -50,7 +50,7 @@
         </form>
     </div>
     <table class="table table-striped table-hover table-bordered caption-top">
-        <caption>List of Machines</caption>
+        <caption class="caption-top">List of Machines</caption>
         <thead>
             <tr>
                 <th scope="col">S No.</th>
